--- a/reports/API_Test_Report.html
+++ b/reports/API_Test_Report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">API Automation Test Results</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Oct 24, 2024 03:40:37 pm</span></a>
+<a href="#"><span class="badge badge-primary">Oct 26, 2024 12:57:44 am</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">Test: Create New Activity</p>
             <p class="text-sm">
-              <span>15:40:38</span> / <span>00:00:00:003</span>
+              <span>00:57:44</span> / <span>00:00:00:002</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Test: Create New Activity</h5>
-<span class='badge badge-success'>10.24.2024 15:40:38</span>
-<span class='badge badge-danger'>10.24.2024 15:40:38</span>
-<span class='badge badge-default'>00:00:00:003</span>
+<span class='badge badge-success'>10.26.2024 00:57:44</span>
+<span class='badge badge-danger'>10.26.2024 00:57:44</span>
+<span class='badge badge-default'>00:00:00:002</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>15:40:38</td>
+        <td>00:57:44</td>
         <td>
           Starting the create activity test
         </td>
@@ -122,7 +122,7 @@
           <div class="test-detail">
             <p class="name">Test: Fetch all activities</p>
             <p class="text-sm">
-              <span>15:40:40</span> / <span>00:00:00:000</span>
+              <span>00:57:46</span> / <span>00:00:00:001</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -131,9 +131,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Test: Fetch all activities</h5>
-<span class='badge badge-success'>10.24.2024 15:40:40</span>
-<span class='badge badge-danger'>10.24.2024 15:40:40</span>
-<span class='badge badge-default'>00:00:00:000</span>
+<span class='badge badge-success'>10.26.2024 00:57:46</span>
+<span class='badge badge-danger'>10.26.2024 00:57:46</span>
+<span class='badge badge-default'>00:00:00:001</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -146,7 +146,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>15:40:40</td>
+        <td>00:57:46</td>
         <td>
           Starting the get all activities test
         </td>
@@ -163,7 +163,7 @@
           <div class="test-detail">
             <p class="name">Test: Fetch a specific activity by ID</p>
             <p class="text-sm">
-              <span>15:40:41</span> / <span>00:00:00:000</span>
+              <span>00:57:47</span> / <span>00:00:00:001</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -172,9 +172,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Test: Fetch a specific activity by ID</h5>
-<span class='badge badge-success'>10.24.2024 15:40:41</span>
-<span class='badge badge-danger'>10.24.2024 15:40:41</span>
-<span class='badge badge-default'>00:00:00:000</span>
+<span class='badge badge-success'>10.26.2024 00:57:47</span>
+<span class='badge badge-danger'>10.26.2024 00:57:47</span>
+<span class='badge badge-default'>00:00:00:001</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -187,7 +187,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>15:40:41</td>
+        <td>00:57:47</td>
         <td>
           Starting the get specific activity test
         </td>
@@ -211,13 +211,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Oct 24, 2024 03:40:37 pm</h3>
+<h3>Oct 26, 2024 12:57:44 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Oct 24, 2024 03:40:41 pm</h3>
+<h3>Oct 26, 2024 12:57:48 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -287,7 +287,7 @@
 </div></div>
 <script>
 var timeline = {
-"Test: Create New Activity":0.003,"Test: Fetch all activities":0,"Test: Fetch a specific activity by ID":0
+"Test: Create New Activity":0.002,"Test: Fetch all activities":0.001,"Test: Fetch a specific activity by ID":0.001
 };
 </script>
 <div class="row">
@@ -299,7 +299,7 @@ var timeline = {
 <tbody>
 <tr>
 <td>Tester</td>
-<td>Sylvester Udoh</td>
+<td>Ekemini Udoh</td>
 </tr>
 <tr>
 <td>Project</td>
